--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 #header{
     width: 100%;
     height: 100vh; 
-    background-image: url(images/backgroun.png);
+    background-image: url();
     background-size: cover;
     background-position: center;
 }
@@ -99,7 +99,7 @@ nav ul li a:hover::after{
 }
 
 .about-col-1 img{
-    width:100%;
+    width:50%;
     border-radius: 15px;
 }
 
@@ -162,36 +162,45 @@ nav ul li a:hover::after{
     display: block;
 }
 
-/* ------------------servics------------ */
+/* ------------------services------------ */
 #services{
     padding: 30px 0;
 }
 
 .services-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    grid-gap:40px;
+    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+    grid-gap:100px;
     margin-top: 50px;
 }
 
 .services-list div{
     background: #262626;
-    padding: 40px;
+    padding: 20px;
     font-size: 13px;
+    height:150px;
+    width:150px;
     font-weight: 300;
     border-radius: 10px;
     transition: background 0.5s,transform 0.5s;
 }
 
-.services-list div i{
+.services-list div img{
+    height: 100%;
+    width: 100%;
+    background-color: none;
+    border-radius: 7px;
+}
+
+/* .services-list div i{
     font-size: 50px;
     margin-bottom: 30px;
-}
-.services-list div h2{
+} */
+/* .services-list div h2{
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
-}
+} */
 
 .services-list div a{
     text-decoration: none;
@@ -222,11 +231,12 @@ nav ul li a:hover::after{
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    
 }
 
 .work img{
     width: 100%;
-    height: 100%;
+    height: 80%;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
@@ -238,14 +248,14 @@ nav ul li a:hover::after{
     background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
     border-radius: 10px;
     position: absolute;
-    left: 0;
-    bottom: 0;
+    right: 0;
+    top: 0;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
+    /* padding: 0 40px; */
     text-align: center;
     transition: height 0.5s;
 }
@@ -254,6 +264,23 @@ nav ul li a:hover::after{
     font-weight: 500;
     margin-bottom: 20px;
 
+}
+
+#demo button{
+    
+   color:white;
+   border-color: #ff004f;
+   border-radius: 15px;
+   height: 35px;
+   width: 90px;
+   gap:50px;
+   margin-top: 40px;
+   background-color: #080808;
+}
+
+#demo button a{
+    text-decoration: none;
+    color: #fff;
 }
 
 .layer a{
@@ -274,7 +301,7 @@ nav ul li a:hover::after{
 }
 
 .work:hover .layer{
-    height:100%;
+    height:70%;
 }
 
 .btn{
@@ -297,10 +324,12 @@ nav ul li a:hover::after{
 /* ---------------------contact-------------- */
 
 .contact-left{
+    margin-top: 100px;
     flex-basis:35%;
 }
 
 .contact-right{
+    margin-top: 100px;
     flex-basis:60%;
 }
 
@@ -375,8 +404,10 @@ form .btn2{
 }
 
 /* ---------------css for small screen------------ */
-
-nav .fa-sharp{
+/* nav .fa-sharp{
+    display: none;
+} */
+nav .fa-solid{
     display: none;
 }
 @media only screen and (max-width:600px){
@@ -393,7 +424,7 @@ nav .fa-sharp{
         font-size: 30px;
     }
 
-    .nav .fa-sharp{
+    nav .fa-solid{
         display: block;
         font-size: 25px;
     }
@@ -415,12 +446,14 @@ nav .fa-sharp{
         margin: 25px;
     }
 
-    nav ul .fa-sharp{
+    nav ul .fa-solid{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
     }
+
+
 
     .sub-title{
         font-size:40px ;
@@ -449,6 +482,39 @@ nav .fa-sharp{
     .copyright{
         font-size: 14px;
     }
+
+    .services-list div{
+        background: #262626;
+        padding: 10px;
+        font-size: 13px;
+        height:100px;
+        width:100px;
+        font-weight: 300;
+        border-radius: 10px;
+        transition: background 0.5s,transform 0.5s;
+    }
+
+    #about{
+        padding: 20px 0;
+        color: #ababab;
+    }
+
+    #services{
+        padding: 0px 0;
+    }
+
+    #demo{
+        margin-bottom: 100px;
+    }
+
+
+    .services-list{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+        grid-gap:10px;
+        margin-top: 50px;
+    }
+    
 
 }
 
