--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@
     left: 15%;
     transform: translateX(-50%);
     margin-bottom: 200px;
+    
 }
 
 @media (max-width: 768px) {
@@ -171,6 +172,7 @@
 .paragraph {
     width: 50%;
     font-size: 18px;
+    padding-left:50px ;
 }
 
 .section-2-button {
@@ -207,6 +209,7 @@
     .paragraph {
         width: 75%;
         font-size: 16px;
+        padding-left:1px ;
     }
 
     .section-2-button {
@@ -230,6 +233,7 @@
     .paragraph {
         width: 90%;
         font-size: 14px;
+        padding-left:1px ;
     }
 
     .section-2-button {
@@ -249,6 +253,7 @@
     .paragraph {
         width: 95%;
         font-size: 12px;
+        padding-left:1px ;
     }
 
     .section-2-button {
@@ -827,12 +832,17 @@
 
 .section-6 {
     padding: 70px 0px 100px 0px;
+    
    
 }
 
 .section-6-inner {
+    padding-top: 15px;
+    padding-left: 15px;
     width: 90%;
     color: #000000;
+    /* border: 1px solid red; */
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .section-6-heading {
